near-bindgen/compilation_tests/bad_argument.stderr
error: Not serializable/deserializable type of the smart contract argument/return type.
  --> $DIR/bad_argument.rs:30:56
   |
30 |     pub fn insert(&mut self, key: TypeA, value: TypeB, t: impl MyTrait) -> Option<TypeB> {
   |                                                        ^
